// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeLabel renders high fees correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <CurrencyLabelContainer
    amountBtc={0.15}
    unit="BTC"
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 2,
          "height": 3,
          "marginHorizontal": 10,
          "width": 3,
        },
        Object {
          "backgroundColor": "#B1AFB7",
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Array [
          undefined,
          Object {
            "color": "#FF3B30",
          },
        ],
      ]
    }
  >
    30%
  </Text>
</View>
`;

exports[`FeeLabel renders low fees correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <CurrencyLabelContainer
    amountBtc={0.001}
    unit="BTC"
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 2,
          "height": 3,
          "marginHorizontal": 10,
          "width": 3,
        },
        Object {
          "backgroundColor": "#B1AFB7",
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Array [
          undefined,
          null,
        ],
      ]
    }
  >
    0.1%
  </Text>
</View>
`;

exports[`FeeLabel renders medium fees correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <CurrencyLabelContainer
    amountBtc={0.12}
    unit="BTC"
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 2,
          "height": 3,
          "marginHorizontal": 10,
          "width": 3,
        },
        Object {
          "backgroundColor": "#B1AFB7",
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "color": "#000000",
        },
        Array [
          undefined,
          Object {
            "color": "#FF9500",
          },
        ],
      ]
    }
  >
    6%
  </Text>
</View>
`;
